--- a/Views/Contato/ApagarConfirmacao.cshtml
+++ b/Views/Contato/ApagarConfirmacao.cshtml
@@ -1,10 +1,13 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Confirmação apagar o contato";
 
 }
+
+
 <div class="text-center">
-    <h3>Realmente deseja apagar o contato (Erick)</h3>
+    <h3>Realmente deseja apagar o contato (@Model.Nome)</h3>
 
 </div>
-<a class="btn btn-primary mb-2 w-100"role="button"asp-controller="Contato" asp-action="Index">Canelar exclusão</a>
-<a class="btn btn-danger w-100"role="button">Confirmar exclusão</a>
+<a class="btn btn-primary mb-2 w-100"role="button"asp-action="Index" asp-controller="Contato">Cancelar exclusão</a>
+<a class="btn btn-danger w-100"role="button"asp-action="Apagar" asp-controller="Contato" asp-route-id="@Model.Id">Confirmar exclusão</a>
