--- a/Views/Contato/Editar.cshtml
+++ b/Views/Contato/Editar.cshtml
@@ -1,27 +1,28 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Editar Contato";
 }
 
 <div class="text-center">
 
     <h1 class="display-4">Editar contato</h1>
-
 </div>
-<form>
-    <div class="mb-3">
+
+<form asp-controller = "Contato" asp-action="Alterar" method="post">
+
+    <input type="hidden" asp-for="Id" />
+    <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" placeholder="Digite o nome do contato">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato">
     </div>
-    <div>
-        <div class="mb-3">
+
+        <div class="form-group">
             <label for="email">E-mail</label>
-            <input type="text" class="form-control" placeholder="Digite o E-mail do contato">
+            <input type="text" asp-for="Email" class="form-control" placeholder="Digite o E-mail do contato">
         </div>
-    </div>
-    <div>
-        <div class="mb-3">
-            <label for="cellar">Celular</label>
-            <input type="text" class="form-control" placeholder="Digite o número do contato">
+        <div class="form-group">
+            <label for="celular">Celular</label>
+            <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do contato">
         </div>
     </div>
 
